@@ -12,7 +12,7 @@ lib_LTLIBRARIES = libobjectbase.la
 
 INCLUDES = -I.. -I$(srcdir)/.. -I$(srcdir)/../collections -I$(srcdir)/../defobj -I$(srcdir)/../activity -I$(srcdir)/../misc $(FFIINCLUDES)
 
-SRC = ActivityControl.m Arguments.m \
+SRC = ActivityControl.m \
 	CompleteVarMap.m CompleteProbeMap.m \
 	CustomProbeMap.m DefaultProbeMap.m EmptyProbeMap.m \
 	MessageProbe.m Probe.m ProbeLibrary.m ProbeMap.m Swarm.m \
@@ -23,19 +23,11 @@ libobjectbase_la_LDFLAGS = -version-info $(CURRENT):$(REVISION):$(AGE)
 
 noinst_HEADERS = local.h
 
-objectbase_HEADERS = ActivityControl.h Arguments.h \
+objectbase_HEADERS = ActivityControl.h \
 	CompleteProbeMap.h CompleteVarMap.h \
 	CustomProbeMap.h DefaultProbeMap.h EmptyProbeMap.h \
 	MessageProbe.h Probe.h ProbeLibrary.h ProbeMap.h Swarm.h \
 	SwarmObject.h VarProbe.h probing.h swarm_rts_routines.h
 
-$(libobjectbase_la_OBJECTS): version.h
+version.h: blah
 
-version.h: $(top_srcdir)/VERSION
-	sed -n '1s/.*/#define SWARM_VERSION "&"/p' < $< > $@
-	sed -n '2s/^\([0-9][0-9]*\)\..*/#define SWARM_MAJOR \1/p' < $< >> $@
-	sed -n '2s/^[0-9][0-9]*\.\([0-9][0-9]*\)\..*/#define SWARM_MINOR \1/p' < $< >> $@
-	sed -n '2s/^[0-9][0-9]*\.[0-9][0-9]*\.\([0-9][0-9]*\)/#define SWARM_SUBMINOR \1/p' < $< >> $@
-
-install-data-local:
-	$(INSTALL_DATA) version.h $(objectbasedir)
